# amplifierd

./: .gitignore  AGENTS.PROJECT.md  Makefile  README.md  pyproject.toml
.amplified/: AGENTS.md
.amplifierd/config/: daemon.yaml
.amplifierd/local/share/modules/max-payne-collection/issue-manager/: README.md  pyproject.toml
.amplifierd/local/share/modules/max-payne-collection/issue-manager/amplifier_module_issue_manager/: __init__.py  algorithms.py  index.py  manager.py  models.py  storage.py
.amplifierd/local/share/modules/max-payne-collection/issue-manager/tests/: test_dependencies.py  test_manager.py  test_ready_work.py  test_storage.py
.amplifierd/share/: collections.yaml
amplifier_library/: __init__.py
amplifier_library/config/: loader.py  settings.py
amplifier_library/execution/: runner.py
amplifier_library/models/: sessions.py
amplifier_library/sessions/: __init__.py  manager.py  state.py
amplifier_library/storage/: __init__.py  (+2 more)
amplifierd/: README.md  __main__.py  dependencies.py  main.py  pyproject.toml  streaming.py
design/: implementation-plan-resume.md  implementation-plan.md
docs/: GUIDE.md  plugins.md
guides/: tools.md
registry/orchestrators/amplifier-module-loop-streaming/: pyproject.toml
registry/orchestrators/amplifier-module-loop-streaming/amplifier_module_loop_streaming/: __init__.py
registry/orchestrators/amplifier-module-loop-streaming/tests/: test_behavioral.py  test_validation.py
tests/: conftest.py  manual_test_seeding.py  test_approvals_routes.py  test_cli.py  test_config.py  test_daemon_session.py  test_end_to_end_module_loading.py  test_health.py  test_models.py  test_profile_named_dirs.py  test_providers.py  test_ref_resolution_enhanced.py  test_session_creation.py  test_session_manager.py  test_sessions_routes.py  test_transcript.py
webapp/: .env.example  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
working/: amplified-context.md
(+227 files in other folders)
