[project]
name = "amplifier-module-issue-manager"
version = "0.1.0"
description = "Issue management module for Amplifier with dependencies and scheduling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[project.entry-points."amplifier.modules"]
issue-manager = "amplifier_module_issue_manager:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
